[package]
name = "verify"
version = "0.1.0"
authors = ["Adolfo Gonzalez III <adolfo.gonzalez02@utrgv.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml", "wrap_help"]}
csv = "1.1"
clap_to_gui = { git = "https://github.com/adolfogonzalez3/clap_to_gui" }
